# plantguard

./: .env.example  .gitignore  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
docker/nginx/: default.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: HistoryPanel.jsx  ResultsPanel.jsx
linting/: pyproject-ruff.toml
notebooks/: 01_data_exploration.ipynb  02_model_prototyping.ipynb
reports/: audio_best.json
runs/audio/: events.out.tfevents.1759744473.Mac.fritz.box.38994.0  events.out.tfevents.1759752778.Mac.fritz.box.69082.0  events.out.tfevents.1759758639.Mac.fritz.box.84655.0  events.out.tfevents.1759776082.Mac.fritz.box.33243.0  events.out.tfevents.1759778737.Mac.fritz.box.52331.0  events.out.tfevents.1759827503.Mac.fritz.box.91348.0  events.out.tfevents.1759828250.Mac.fritz.box.96079.0
scripts/: __init__.py  build_fusion_features.py  build_fusion_manifest.py  build_vector_store.py  download_data.py  evaluate.py  export_torchscript.py  generate_audio_from_csv.py  prepare_plantvillage.py  prepare_plantvillage_vqa_text.py  run_text_inference.py  train_audio.py  train_audio_cnn_lstm.py  train_fusion.py  train_text.py  train_vision.py
src/: __init__.py
src/backend/: __init__.py  config.py  main.py
src/backend/routes/: __init__.py  audio.py  fusion.py  image.py  text.py
src/backend/services/: __init__.py  (+6 more)
tests/: test_api.py  test_frontend.py  test_models.py  test_preprocess.py
(+14 files in other folders)
